--- a/educacion.css
+++ b/educacion.css
@@ -40,6 +40,11 @@
     color: rgb(105, 105, 105);
 }
 
+.educaciones .educacion .tesis {
+    font-size: 18px;
+    color: rgb(105, 105, 105);
+}
+
 @media (max-width: 768px) {
 
     .educaciones {
@@ -79,5 +84,10 @@
         font-size: 12px;
         color: rgb(105, 105, 105);
     }
-
+    
+    .educaciones .educacion .tesis {
+        font-size: 12px;
+        color: rgb(105, 105, 105);
+    }
+    
 }
